@@ -29,6 +29,7 @@
 #include "webpage.h"
 #include "qzsettings.h"
 
+#include <QTimer>
 #include <QSplitter>
 #include <QHBoxLayout>
 #include <QStackedWidget>
@@ -239,6 +240,12 @@ void NavigationBar::setLayoutSpacing(int spacing)
     m_layout->setSpacing(spacing);
 }
 
+void NavigationBar::pauseUpdates()
+{
+    setUpdatesEnabled(false);
+    QTimer::singleShot(100, this, SLOT(enableUpdates()));
+}
+
 void NavigationBar::aboutToShowHistoryBackMenu()
 {
     if (!m_menuBack || !p_QupZilla->weView()) {
@@ -312,6 +319,11 @@ void NavigationBar::clearHistory()
     QWebHistory* history = p_QupZilla->weView()->page()->history();
     history->clear();
     refreshHistory();
+}
+
+void NavigationBar::enableUpdates()
+{
+    setUpdatesEnabled(true);
 }
 
 void NavigationBar::contextMenuRequested(const QPoint &pos)
