@@ -63,6 +63,9 @@ public:
     int layoutSpacing() const;
     void setLayoutSpacing(int spacing);
 
+    // Pause updates for 100 msecs
+    void pauseUpdates();
+
 signals:
 
 public slots:
@@ -81,6 +84,7 @@ private slots:
     void goAtHistoryIndexInNewTab(int index = -1);
 
     void clearHistory();
+    void enableUpdates();
 
     void contextMenuRequested(const QPoint &pos);
 
